# qftp

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
apps/: Cargo.toml
docs/: qftp_1.md
qftp/: .gitignore  Cargo.toml  LICENSE-MIT  rustfmt.toml
qftp-derive/: Cargo.toml
qftp-derive/src/: lib.rs
qftp/cert/: README.md  dev  dev.crt  dev.crt.der  dev.csr  dev.key  dev.key.der  dev_ca.crt  dev_ca.key
qftp/docs/: qftp_1.md
qftp/src/: auth.rs  client.rs  connected_client.rs  control_stream.rs  distributor.rs  files.rs  lib.rs  message.rs  messages.rs  server.rs
qftp/tests/: auth.json  server_client_connection_test.rs
qftp/tests/walk_dir/: root.txt
src/: client.rs  connected_client.rs  lib.rs  messages.rs  server.rs
tests/: server_client_connection_test.rs
