[package]
name = "qftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.0"
quinn = {version = "0.9", default-features = false, features = ["tls-rustls", "ring", "runtime-tokio", "native-certs"]}
tokio = {version = "1", features = ["full"]}
rustls = {version = "0.20", features=["quic", "dangerous_configuration"], default-features = false}
rustls-native-certs = "0.6.0"
thiserror = "1.0.0"
[profile.dev.package.backtrace]
opt-level = 3